blog readability fix
- fix blog spacing in mobile

--- a/assets/scss/layouts/blog/_blog.scss
+++ b/assets/scss/layouts/blog/_blog.scss
@@ -38,7 +38,8 @@
 
 .blog-title {
     font-size: fontSize("large");
-    margin: 0 spacing("single") spacing("quarter");
+    margin: spacing("single") 0px spacing("single");
+    font-weight: bold;
 
     a {
         text-decoration: none;
@@ -49,6 +50,7 @@
 .blog-author {
     color: stencilColor("color-textSecondary");
     text-align: center;
+    margin-bottom: spacing("single");
 }
 
 .blog-author {
@@ -56,8 +58,30 @@
 }
 
 .blog-post {
-    font-size: fontSize("smaller");
+    // font-size: fontSize("large");
     text-align: left;
+
+    a {
+        text-decoration: underline;
+        font-weight: bold;
+    }
+
+    p {
+        font-size: large;
+    }
+
+    p, h1, h2, h3, h4, h5, h6 {
+        margin-bottom: spacing("single");
+        line-height: spacing("single");
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        font-weight: bold;
+    }
+
+    img {
+        margin-bottom: spacing("single");
+    }
 }
 
 .blog-thumbnail {
@@ -88,7 +112,8 @@
     display: block;
     margin: 0 auto;
     text-align: center;
-    width: 100%;
+    // width: 100%;
+    width: grid-calc(10, $total-columns);
 
     @include breakpoint("small") {
         width: grid-calc(10, $total-columns);
